Some bug fixes - make acheck graphic square. Fix link urls to match others. Max size on images on mobile on blog.

--- a/site/assets/style/style.scss
+++ b/site/assets/style/style.scss
@@ -297,7 +297,24 @@ header {
             }
         }
 
-        
+        img {
+            max-width: 100%;
+
+            @media (max-width: 767px) {
+                width: 100%;
+            }
+
+            @media (max-width: 480px) {
+                width: 100%;
+            }
+        }
+
+        a {
+            @media (max-width: 480px) {
+                word-wrap: break-word;
+            }
+        }
+
     }
 }
 
